# fracture

./: .gitignore  Cargo.toml  README.md
css/: border.css
flatpak/: README.md  build-bundle.sh  build.sh  fracture.desktop  fracture.metainfo.xml  systems.fracture.launcher.yml
src/: application_channel_creator.rs  global_application_state.rs  main.rs  ui_state.rs
src/gpu_mirror_display/: binary_images.rs  defaults.rs  event_loop.rs  mod.rs  overlay_ui.rs  pipeline_definitions.rs  postprocessing_shaders.rs  render.rs  shutdown.rs  state.rs  utility_texture.rs  utility_vertex.rs  window_cropping.rs  window_resizing.rs
src/gpu_mirror_display/input/: events_keyboard.rs  events_mouse.rs  mod.rs  utility_mouse.rs
src/gtk_user_interfaces/: install_ui.rs  mod.rs  settings_ui.rs
src/shaders/: mirror.wgsl  mod.rs  ui.wgsl
src/shaders/examples/: flip_horizontal.wgsl.snippet  flip_vertical.wgsl.snippet  invert_colors.wgsl.snippet  rotate_left.wgsl.snippet  shifting_color_gradient.wgsl.snippet  show_inputs.wgsl.snippet
src/stream_creation/: mod.rs  pipewire_dbus.rs  start_mirror_stream.rs  utility_gnome_video_frame.rs
